#+STARTUP:showall

* Changelog

** Next

- Added support for =company-mode= and =company-box=. See [[https://github.com/mssola/soria/commit/390f03333e2e6083ee5d7f9b36c2e794105cf466][390f03333e2e]].
- Fixed Helm selection for GNU Emacs 27.x. See [[https://github.com/mssola/soria/commit/41520c0418a2a5468ac7696159a7dedb558187a7][41520c0418a2]].
- Added support for =org-drawer= and =org-special-keyword=. See [[https://github.com/mssola/soria/commit/8539cc132c92519b9053ed48d1bdecac6a64bdd5][8539cc132c92]].
- Added support for =mode-line= and =doom-modeline=. See [[https://github.com/mssola/soria/commit/ed79c3acfeb457e9d1b6fbb3c97269723e99f633][ed79c3acfeb4]].

** 0.3.2

- Changed =soria-theme-purple-identifiers= so it's interactive. See [[https://github.com/mssola/soria/commit/ababa4f383fc038a3b03babb99e7dbbc4f1aa3aa][ababa4f383fc]].

** 0.3.1

- Added a =build= target to the Makefile. See [[https://github.com/mssola/soria/commit/524b5a1830df4dc90a7a5fce6e06f5f4d9f77904][524b5a1830df]].

** 0.3.0

- Added a =checkdoc= make target. See [[https://github.com/mssola/soria/commit/c3551def989ca5418468b64939f991ed042eabf1][c3551def989c]].
- In the process of submitting this theme to melpa (see [[https://github.com/melpa/melpa/pull/6808][melpa#6808]]), there have been some further improvements:
  - Enable byte compiling and lexical binding. See [[https://github.com/mssola/soria/commit/eb0d6621c991557964823c8af326a5dfdc56dd6f][eb0d6621c991]].
  - Use =highlight-numbers-number= instead of hacking my own parser. See [[https://github.com/mssola/soria/commit/57709c323c9c94717626fffd496236a8f1eb8e08][57709c323c9c]].

** 0.2
